# whackadep

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose-all.yml  docker-compose.yml  thing
.github/workflows/: ci.yml  clippy.yml
analysis/: Cargo.toml
analysis/resources/test/non_rust/: norust.md
analysis/resources/test/valid_dep/: Cargo.toml
analysis/src/: code.rs  cratesio.rs  diff.rs  github.rs  lib.rs  main.rs
cronjobs/: Dockerfile  README.md  daily-cron
cronjobs/daily/: Cargo.toml  update.sh
cronjobs/daily/src/: db.rs  main.rs
cronjobs/init/: init.sh
db/: README.md  docker-compose.yml
depdive/: Cargo.toml  README.md
depdive/resources/test/: depkind_metadata.json  exclusive_dep_cargo_metadata.json  metadata_notes.md  post_conflict_metadata.json  post_guppy_change_metadata.json  post_libc_change_metadata.json  post_rustsec_metadata.json  prior_conflict_metadata.json  prior_dep_change_metadata.json  prior_libc_change_metadata.json  prior_rustsec_metadata.json
depdive/resources/test/valid_dep/: Cargo.toml
depdive/resources/test/valid_workspace/: Cargo.toml
depdive/resources/test/valid_workspace/member_a/: Cargo.toml
depdive/resources/test/valid_workspace/member_b/: Cargo.toml
depdive/src/: advisory.rs  code.rs  cratesio.rs  diff.rs  ghcomment.rs  github.rs  guppy_wrapper.rs  lib.rs  main.rs  super_toml.rs  update.rs
docs/: LOCAL_K8S_GUIDE.md
k8s/: README.md  backend-service.yaml  mongo-service.yaml
k8s/base/: backend-deployment.yaml  backend-service.yaml  cargo-persistentvolumeclaim.yaml  diem-persistentvolumeclaim.yaml  frontend-claim0-persistentvolumeclaim.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  mongo-deployment.yaml  mongo-express-deployment.yaml  mongo-express-service.yaml  node-modules-persistentvolumeclaim.yaml
k8s/overlays/local/: backend-deployment.yaml  frontend-deployment.yaml  kustomization.yaml  mongo-express-deployment.yaml  mongo-express-service.yaml
metrics/: Cargo.toml  README.md
metrics/src/: db.rs  git.rs  lib.rs
metrics/src/languages/: mod.rs  rust.rs
scripts/: create-docker-images.sh  create-kind-cluster-with-local-registry.sh  push-docker-images.sh
web-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  github_token  rust-toolchain
web-backend/dependabot/: changelog.rb
web-backend/metrics/: .gitignore  Cargo.toml  README.md
web-backend/metrics/dependabot/: Dockerfile  Gemfile  README.md  changelog.rb  docker-compose.yml
web-backend/metrics/resources/test/: cargo-audit.json  summary-full.json  summary-release.json
web-backend/metrics/resources/test/sample_repo/: Cargo.toml
web-backend/metrics/resources/test/sample_repo/optional_dep/: Cargo.toml
web-backend/metrics/resources/test/sample_repo/optional_dep/src/: lib.rs
web-backend/metrics/resources/test/sample_repo/src/: main.rs
web-backend/metrics/src/: analysis.rs  db.rs  git.rs  lib.rs
web-backend/metrics/src/common/: dependabot.rs  github.rs  mod.rs
web-backend/metrics/src/dependabot/: mod.rs
web-backend/metrics/src/languages/: rust.rs
web-backend/metrics/src/model/: config.rs  dependencies.rs  mod.rs
web-backend/metrics/src/rust/: cargoaudit.rs  cargoguppy.rs  cargotree.rs  cratesio.rs  diff.rs  guppy.rs  mod.rs  rustsec.rs
web-backend/src/: main.rs  metrics.rs
web-backend/ui/: Cargo.toml  README.md
web-backend/ui/src/: main.rs
web-frontend/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js
web-frontend/public/: index.html
web-frontend/src/: App.vue  main.js
web-frontend/src/components/: Dashboard.vue  Dependencies.vue  DependencyHealthDashboard.vue  DependencyHealthTable.vue  Information.vue  LandingPage.vue  Modal.vue  Repo.vue  Review.vue  Rustsec.vue  Statistics.vue
web-frontend/src/engines/: priority.js  risk.js
web-frontend/src/router/: index.js
web-frontend/src/store/: index.js
web-frontend/src/utils/: dependencies.js
