[package]
name = "depdive"
version = "0.1.0"
authors = ["Brandon Williams <bmwill@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38" # error handling library
tabled = "0.2.1"
git2 = "0.13.15" # git library
reqwest = "0.11.0" # http client
tempfile = "3.2.0" # temporary folder helper
serde = { version = "1.0", features = ["derive"] } # bson serialization
serde_json = "1.0" # bson serialization
tokio = { version = "1.6.1", features = ["full"] } # old version because of mongodb driver...
futures = "0.3.12" # async stuff
tracing = "0.1.22" # logging
regex = "1.4.3" # used for checking diff output
chrono = "0.4" # used for datetime of mongodb document
rust-crypto = "0.2" # used to hash the repo url (to derive a folder dir)

guppy = { version = "0.9.0", features = ["summaries"] } # library to analyze deps
guppy-summaries = "0.4.0" # guppy summaries
target-spec = "0.7.0" # guppy stuff
semver = "0.11.0" # semver of dependencies
url = "2.2.2" # url parsing
rustsec = "0.24.1" # RUSTSEC advisory stuff
crates_io_api = "0.7.1" # crates.io stuff
tokei = "12.1.2" # loc count
camino = "1.0.4" # UTF-8 path stuff
serial_test = "0.5.1" # avoiding running some tests in parallel
tar = "0.4.35" # tar file stuff
flate2 = "1.0.20" # compression/decompression
thiserror = "1.0.26" # custom error handling
geiger = "0.4.7" # file unsafe scanning
