[package]
name = "metrics"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guppy = "0.6.3" # library to analyze deps
mongodb = "1.1.1" # database used to store result of cronjobs
anyhow = "1.0.38" # error handling library
git2 = "0.13.15" # git library

[dev-dependencies]
tempfile = "3.2.0"
