[package]
name = "webUI"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.6" # web framework
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
anyhow = "1.0.38" # error handling
tokio = { version = "0.2.18", features = ["full"] } # old version because of mongodb driver...
serde_json = "1.0"
futures = "0.3.12"

metrics = { path = "./metrics" }
