[package]
name = "web_ui"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.6" # web framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
anyhow = "1.0.38" # error handling
old_tokio = { package = "tokio", version = "0.2.18", features = ["full"] } # old version because of mongodb driver...
tokio = { version = "1.1.0", features = ["full"] } # old version because of mongodb driver...
serde_json = "1.0"
slog = "2.7.0" # logging
slog-term = "2.6.0" # logging
slog-async = "2.6.0" # logging

metrics = { path = "./metrics" }
