[package]
name = "web_ui"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.6" # web framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
anyhow = "1.0.38" # error handling
tokio = { version = "1.1.0", features = ["full"] } # old version because of mongodb driver...
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"

metrics = { path = "./metrics" }
