[package]
name = "daily"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guppy = "0.6.3" # library to analyze deps
postgres = "0.19.0" # database used to store result of cronjobs
anyhow = "1.0.38" # error handling library