[package]
name = "metrics"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

[dependencies]
# stdlib-like
anyhow = "1.0.38" # error handling library
git2 = "0.13.15" # git library
reqwest = "0.11.0" # http client
tempfile = "3.2.0" # temporary folder helper
serde = { version = "1.0", features = ["derive"] } # bson serialization
serde_json = "1.0" # bson serialization
old_tokio = { package = "tokio", version = "0.2.18", features = ["full"] } # old version because of mongodb driver...
tokio = { version = "1.1.0", features = ["full"] } # old version because of mongodb driver...
futures = "0.3.12"
slog = "2.7.0" # logging

# driver
mongodb = "1.1.1" # database used to store result of cronjobs

# app-specific
guppy = "0.6.3" # library to analyze deps
guppy-summaries = "0.3.1" # guppy summaries
semver = "0.11.0" # semver of dependencies
octocrab = "0.8"  # interact with github API

# bin-specific
jsonwebtoken = "7.2.0" 


#
# Binaries
#

# helper to populate database with test data
[[bin]]
name = "populate_test_data"
