[package]
name = "metrics"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

[dependencies]
# stdlib-like
anyhow = "1.0.38" # error handling library
git2 = "0.13.15" # git library
reqwest = "0.11.0" # http client
tempfile = "3.2.0" # temporary folder helper
serde = { version = "1.0", features = ["derive"] } # bson serialization
serde_json = "1.0" # bson serialization
tokio = { version = "1.6.1", features = ["full"] } # old version because of mongodb driver...
futures = "0.3.12" # async stuff
tracing = "0.1.22" # logging
regex = "1.4.3" # used for checking diff output
chrono = "0.4" # used for datetime of mongodb document
rust-crypto = "0.2" # used to hash the repo url (to derive a folder dir)

# driver
mongodb = "2.0.0-alpha" # database used to store result of analyses (note: alpha supports latest tokio)

# app-specific
guppy = { version = "0.9.0", features = ["summaries"] } # library to analyze deps
guppy-summaries = "0.4.0" # guppy summaries
target-spec = "0.7.0" # guppy stuff
semver = "0.11.0" # semver of dependencies
octocrab = "0.8.11"  # interact with github API
rustsec = "0.22.2" # RUSTSEC advisory stuff

# bin-specific
jsonwebtoken = "7.2.0"
