[package]
name = "valid_dep"
version = "0.1.0"
authors = ["Nasif Imtiaz <nasifimtiaz@fb.com>"]
edition = "2018"
include = [
    "Cargo.toml",
    "build/**/*.rs"
]
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.97"
gitlab = "0.1312.0"
octocrab = "0.9.1"
guppy = "0.8.0"

[workspace]
