[package]
name = "thing"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optional_dep = { path = "./optional_dep", optional = true }
bitvec = { version = "0.20.1", optional = true }

[features]
default = ["optional_dep"]
great = ["optional_dep", "bitvec"]
